# micropython-gy271-qmc5883l

./: .copier-answers.yml  README.md  boot.py  main.py  micropython-gy271-qmc5883l.code-workspace  pyproject.toml
config/: board.py
lib/: qmc5883l.py
lib/qmc5883l/: __init__.py  qmc5883l.py
